# projets-showcase

./: .gitignore  PUBLICATION_AUDIT.md  README.md
STC_GEST_1/: .gitignore  README.md
STC_GEST_2/: .gitignore  README.md  package.json
SenTechCare-One/: .gitignore  README.md  mvnw  pom.xml
TP/: .gitignore  README.md
ai-data-assistant/: .gitignore  README.md
crosswords_abdoulaye_mbaye_ngalamou-yinipi_jospen-main/: .gitignore  README.md  alea.h  config.h  cross_jouable.c  crossword.c  crossword.h  lexicon-american  lexicon-test.txt  lexicon.c  lexicon.h  lexique_final.txt  main.c  makefile
data-kpi-dashboard/: .gitignore  README.md
django-flask-api-lab/: .gitignore  README.md  requirements.txt
docker-kubernetes-lab/: .gitignore  README.md  docker-compose.yml
easyshop/: .env.example  .gitignore  README.md
image_decoupe/: README.md  bloc_class.py  image_rec.py
jee-management-app/: .gitignore  README.md  pom.xml  preview.html
jo_soccer/: README.md  jo_soccer.html  note_projet.txt  projet2024-statique.html
l2s4-projet-2025/: .gitignore  Makefile  README.md  TesteResultat.md
nextjs-typescript-dashboard/: README.md  package-lock.json  package.json
refonte_tp3_serveur_web-main/: LICENSE  README.md  pyproject.toml
refonte_tp3_serveur_web-main/src/myserver/: __init__.py  __main__.py  cli.py  context_server.py  date.py  file.py  http.py  http_request.py  log.py  repertoire.py
refonte_tp3_serveur_web-main/tests/: test_file.py  test_http_request.py  test_log.py  test_server.py
refonte_tp3_serveur_web-main/tests/resources/www/: index.html  styles.css
(+889 files in other folders)
